refactor(cli): move nxz CLI to packages/nxz/ and bump to v3.2.0
- Move src/cli/nxz.ts → packages/nxz/src/nxz.ts with import transforms
- Replace inline TarEntry (5 fields) with import type from tar-xz (13 fields)
- Replace inline TarXzModule with typeof import('tar-xz')
- Use package imports (node-liblzma, node-liblzma/wasm) instead of relative paths
- Use import.meta.resolve for WASM binary path resolution
- Add WASM subpath exports with types conditions to root package.json
- Remove bin field and ./cli export from root package (moved to nxz-cli)
- Move CLI test to packages/nxz/test/ with updated paths
- Update publish.yml to build workspace packages
- Bump all 3 packages from 3.1.2 → 3.2.0

--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "node-liblzma",
-  "version": "3.1.2",
+  "version": "3.2.0",
   "description": "NodeJS wrapper for liblzma",
   "type": "module",
   "main": "./lib/lzma.js",
-  "bin": {
-    "nxz": "./lib/cli/nxz.js"
-  },
   "exports": {
     ".": {
       "browser": {
@@ -28,7 +25,11 @@
       "import": "./lib/lzma.inline.js",
       "default": "./lib/lzma.inline.js"
     },
-    "./cli": "./lib/cli/nxz.js"
+    "./wasm/liblzma.js": {
+      "types": "./src/wasm/liblzma.d.ts",
+      "default": "./lib/wasm/liblzma.js"
+    },
+    "./wasm/liblzma.wasm": "./lib/wasm/liblzma.wasm"
   },
   "scripts": {
     "postinstall": "node-gyp-build",
@@ -88,6 +89,7 @@
     "lib/",
     "prebuilds/",
     "src/bindings/",
+    "src/wasm/liblzma.d.ts",
     "src/wasm/liblzma.js",
     "src/wasm/liblzma.wasm",
     "scripts/build_xz_with_cmake.py",
