--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -116,7 +116,7 @@ jobs:
           done
 
       - name: Build TypeScript
-        run: pnpm build
+        run: pnpm build && pnpm -r --filter './packages/*' run build
 
       - name: Publish node-liblzma to npm with provenance
         if: ${{ inputs.skip_npm != true }}
