--- a/.github/workflows/test-with-artifacts.yml
+++ b/.github/workflows/test-with-artifacts.yml
@@ -60,6 +60,8 @@ jobs:
           path: .
       - name: Install test dependencies only
         run: pnpm install --frozen-lockfile --production=false
+      - name: Build workspace packages
+        run: pnpm -r --filter './packages/*' run build
       - name: Run tests
         run: pnpm test
       - name: Type check
@@ -120,6 +122,8 @@ jobs:
           path: .
       - name: Install test dependencies only
         run: pnpm install --frozen-lockfile --production=false
+      - name: Build workspace packages
+        run: pnpm -r --filter './packages/*' run build
       - name: Run tests
         run: pnpm test
       - name: Type check
