--- a/.github/workflows/check-xz-updates.yml
+++ b/.github/workflows/check-xz-updates.yml
@@ -117,8 +117,8 @@ jobs:
           git_user_signingkey: true
           git_commit_gpgsign: true
           git_config_global: true
-          git_committer_name: github-actions[bot]
-          git_committer_email: 41898282+github-actions[bot]@users.noreply.github.com
+          git_committer_name: Olivier ORABONA
+          git_committer_email: oorabona@users.noreply.github.com
 
       - name: Update xz-version.json
         if: steps.check.outputs.new_version == 'true' && steps.test.outputs.test_passed == 'true' && (github.event.inputs.create_pr == 'true' || github.event_name == 'schedule')
@@ -138,7 +138,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "feat: update XZ to ${{ steps.check.outputs.latest }}"
-          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
+          committer: Olivier ORABONA <oorabona@users.noreply.github.com>
           title: "🆙 Update XZ Utils to ${{ steps.check.outputs.latest }}"
           body: |
             ## XZ Utils Update Available
