--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -174,8 +174,8 @@ jobs:
 
       - name: Create pre-release tag
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "Olivier ORABONA"
+          git config user.email "oorabona@users.noreply.github.com"
           git tag v${{ github.event.inputs.version }}
           git push origin v${{ github.event.inputs.version }}
 
